--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,5 +1,5 @@
 <h1>It works</h1>
-<%= bootstrap_form_for(@post) do |f| %>
+<%= bootstrap_form_for(@todo) do |f| %>
   <%= f.text_field :title %>
   <%= f.submit "Create" %>
 <% end %>
