--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,4 +4,8 @@
   <p><%= link_to "Sign Out", sign_out_path %></p>
 
   <p><%= link_to "Create a new todo", new_todo_path %></p>
+
+  <% current_user.todos.each do |todo| %>
+    <p><%= todo.title %></p>
+  <% end %>
 </div>
