--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,18 @@
 <div class='container'>
-  <h1 class='black'>Hi <%= current_user.name %> </h1>
 
+  <h1 class='main-header black'>Hi <%= current_user.name %> </h1>
+
+  <ul class='list-inline'>
   <!--  unless current_user.todays_todos >= 3  -->
-    <p><%= link_to "Create a new todo", new_todo_path, class: 'black' %></p>
+  <li><%= link_to "Create a new todo", new_todo_path, class: 'black' %></li>
   <!-- end -->
-
-  <p class='black'><%= link_to "Sign Out", sign_out_path, class: 'black' %></p>
-
-
+  <li class='black'><%= link_to "Sign Out", sign_out_path, class: 'black' %></li>
+  </ul>
 
   <% current_user.todos.each do |todo| %>
-    <% if todo.created_today? && (todo.status == nil) %>
+    <% if todo.created_today? # && (todo.status == nil) %>
       <p><%= render 'todos/todo_card', todo: todo %></p>
     <% end %>
   <% end %>
+
 </div>
