--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,10 +29,8 @@ html {
 
 body {
   position: absolute;
-  top: 70%;
   left: 0;
   width: 100%;
-  margin-top: -200px;
   overflow: scroll;
 }
 
@@ -43,13 +41,31 @@ h1 {
   margin: 0;
 }
 
+h1.main-header {
+  margin-top: 150px;
+  padding-bottom: 10px;
+}
+
+.white {
+  color: white;
+}
+
+.home-page-form {
+  padding-top: 0!important;
+}
+
+.todo-card {
+  padding: 10px; 
+  border: grey 1px solid; 
+  margin: 25px;
+  border-radius: 5px;
+}
+
 .wrapper {
   position: absolute;
   top: 50%;
   left: 0;
   width: 100%;
-  height: 400px;
-  margin-top: -200px;
   overflow: hidden;
 }
 
@@ -62,7 +78,7 @@ h1 {
 .container {
   max-width: 600px;
   margin: 0 auto;
-  height: 400px;
+  height: 800px;
   text-align: center;
 }
 
@@ -142,6 +158,8 @@ form input:focus {
   width: 300px;
   color: #53e3a6;
 }
+
+
 form button {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -165,6 +183,7 @@ form button:hover {
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   z-index: 1;
