style change on todo card

--- a/app/views/todos/_todo_card.html.erb
+++ b/app/views/todos/_todo_card.html.erb
@@ -1,8 +1,6 @@
 <div class='todo-card <%= card_color(todo) %>'>
 
-  <h2>
-  <%= todo.title %>
-  </h2>
+  <h2><%= todo.title %></h2>
 
   Completed?
   <button type="button" class="btn btn-default">
