--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,7 +14,7 @@
 				  <% end %>
 			</div>
 
-			<%= link_to "Already have one? Log in", sign_in_path %>
+			<%= link_to "Already have one? Log in", sign_in_path, class: "white" %>
 
 		<ul class="bg-bubbles">
 				<li></li>
