--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,7 +99,6 @@ form {
 }
 
 a {
-  color:white;
   position: relative;
   z-index: 2;
 
@@ -301,4 +300,8 @@ form button:hover {
 
 .main {
   height: 100%;
+}
+
+.sign-out {
+  margin-right: -100px;
 }
